Added script name prefix

--- a/src/ensembl/production/datacheck/templates/base.html
+++ b/src/ensembl/production/datacheck/templates/base.html
@@ -69,6 +69,10 @@
       {%- endblock content %}
 
       {% block scripts %}
+          <script type="text/javascript">
+              var script_name = "{{script_name}}";
+              console.log("script_name " + script_name);
+          </script>
         {{ bootstrap.load_js(version='4.3.0') }}
       {%- endblock scripts %}
     {%- endblock body %}
