sort by datacheck job

--- a/src/ensembl/production/datacheck/templates/list.html
+++ b/src/ensembl/production/datacheck/templates/list.html
@@ -27,7 +27,7 @@
                        data-detail-formatter="detailFormatter"
                        data-buttons-class="btn h-buttons"
                        data-query-params="queryParams"
-                       data-sort-name="input.timestamp"
+                       data-sort-name="id"
                        data-sort-order="desc"
                        data-show-columns="true">
                     <thead>
