--- a/src/ensembl/production/datacheck/templates/list.html
+++ b/src/ensembl/production/datacheck/templates/list.html
@@ -3,6 +3,7 @@
 {% block head %}
     {{ super() }}
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-table.min.css') }}"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 {% endblock %}
 {% block content %}
 
@@ -27,7 +28,7 @@
                        data-detail-formatter="detailFormatter"
                        data-buttons-class="btn h-buttons"
                        data-query-params="queryParams"
-                       data-sort-name="id"
+                       data-sort-name="input.timestamp"
                        data-sort-order="desc"
                        data-show-columns="true">
                     <thead>
@@ -51,7 +52,7 @@
                         </th>
                         <th data-field="status" data-sortable="true" data-formatter="statusFormat">Status</th>
                         <th data-field="input.tag" data-sortable="true">Tag</th>
-                        <th data-field="input.timestamp" data-sortable="true">Start Time</th>
+                        <th data-field="input.timestamp" data-formatter="DateFormat" data-sorter="DateSorter" data-sortable="true">Start Time</th>
                         <th data-field="output" data-sortable="true" data-visible="false"
                             data-formatter="FormatTimestamp">End Time
                         </th>
